--- a/stashManagerApple/stashManagerApple/Presentation/Modules/Home/HomeViewController.xib
+++ b/stashManagerApple/stashManagerApple/Presentation/Modules/Home/HomeViewController.xib
@@ -47,6 +47,9 @@
                                     <rect key="frame" x="16" y="0.0" width="297" height="32"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits"/>
+                                    <connections>
+                                        <action selector="filterRoom:" destination="-1" eventType="editingChanged" id="CSX-Z7-Wkr"/>
+                                    </connections>
                                 </textField>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fy4-OF-EhL">
                                     <rect key="frame" x="317" y="0.0" width="32" height="32"/>
